--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.6)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.6\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.7)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.7\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.6)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.6\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.7)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.7\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1891,6 +1891,7 @@ msgctxt "admin.Settings_Images_Lazy"
 msgid "LoadChk"
 msgstr ""
 
+# Own algorithm
 msgctxt "admin.Settings_Images_Lazy"
 msgid "OwnChk"
 msgstr ""
@@ -3061,6 +3062,10 @@ msgstr ""
 # local
 msgctxt "admin.Settings_Advanced_AsyncMode"
 msgid "Local"
+msgstr ""
+
+msgctxt "admin.Settings_Advanced_AsyncMode"
+msgid "ReRoot"
 msgstr ""
 
 # internal (beta)
