--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.9)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.9\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.10)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.10\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.9)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.9\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.10)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.10\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2521,6 +2521,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "PrstPlrChk"
 msgstr ""
 
+# Once animation of Page Builder Blocks of GreenShift
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "GrnshftPbAosOnceAniChk"
 msgstr ""
@@ -2868,6 +2869,10 @@ msgstr ""
 # Enable
 msgctxt "admin.Settings_Cdn_Item"
 msgid "EnabledLbl"
+msgstr ""
+
+msgctxt "admin.Settings_Cdn_Item"
+msgid "ScrApplyChk"
 msgstr ""
 
 # Address
