--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.11\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.11\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.22.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -651,6 +651,14 @@ msgstr ""
 # Check
 msgctxt "admin.Manage_Operate"
 msgid "Check"
+msgstr ""
+
+msgctxt "admin.HostingBanner"
+msgid "Name"
+msgstr ""
+
+msgctxt "admin.HostingBanner"
+msgid "Description"
 msgstr ""
 
 # %1$s post in queue
@@ -2871,6 +2879,7 @@ msgctxt "admin.Settings_Cdn_Item"
 msgid "EnabledLbl"
 msgstr ""
 
+# Apply to scripts
 msgctxt "admin.Settings_Cdn_Item"
 msgid "ScrApplyChk"
 msgstr ""
@@ -3184,6 +3193,10 @@ msgstr ""
 #, php-format
 msgctxt "admin.Settings_Advanced_Test"
 msgid "TestContExtraChk_%1$s"
+msgstr ""
+
+msgctxt "admin.HostingBanner"
+msgid "Title"
 msgstr ""
 
 # After the settings will been changed, please, don't forget to update the cache %1$shere%2$s.
