--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.22.16)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.16\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.23)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.23\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.22.16)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.22.16\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.23)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.23\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -749,7 +749,7 @@ msgstr ""
 # Adapting '%1$s' image
 #, php-format
 msgctxt "admin.Msg"
-msgid "ImgAdaptFile_%1$s"
+msgid "ImgAdaptFile_%1$s%2$s"
 msgstr ""
 
 # Compression '%1$s' is not supported
@@ -1860,6 +1860,11 @@ msgctxt "admin.Settings_Images_Compr"
 msgid "RedirOwnChk"
 msgstr ""
 
+# Process asynchronously
+msgctxt "admin.Settings_Images_Compr"
+msgid "AsyncChk"
+msgstr ""
+
 # Adaptation to screen sizes
 msgctxt "admin.Settings_Images_Adapt"
 msgid "Lbl"
@@ -1884,6 +1889,16 @@ msgstr ""
 # Use Device Pixel Ratio
 msgctxt "admin.Settings_Images_Adapt"
 msgid "DprChk"
+msgstr ""
+
+# Process asynchronously
+msgctxt "admin.Settings_Images_Adapt"
+msgid "SzAdaptAsyncChk"
+msgstr ""
+
+# On demand
+msgctxt "admin.Settings_Images_Adapt"
+msgid "SzAdaptOnDemandChk"
 msgstr ""
 
 # Elements' XPath selectors, each on newline
@@ -2539,6 +2554,11 @@ msgstr ""
 # Once animation of Page Builder Blocks of GreenShift
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "GrnshftPbAosOnceAniChk"
+msgstr ""
+
+# Animation of Page Builder Blocks of GreenShift
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "GrnshftPbAosAniChk"
 msgstr ""
 
 # Scripts
