--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.23.3)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.23.3\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.23.4)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.23.4\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.23.3)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.23.3\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.23.4)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.23.4\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -192,6 +192,7 @@ msgctxt "admin.Common"
 msgid "PluginListSep"
 msgstr ""
 
+# ; 
 msgctxt "admin.Common"
 msgid "PluginListTokenSep"
 msgstr ""
@@ -542,7 +543,7 @@ msgctxt "admin.Manage_Status"
 msgid "LoadAvgLbl"
 msgstr ""
 
-# GEO database:
+# External databases:
 msgctxt "admin.Manage_Status"
 msgid "ExtDbLbl"
 msgstr ""
@@ -834,7 +835,7 @@ msgctxt "admin.Msg"
 msgid "JsUrlWrongType_%1$s%2$s"
 msgstr ""
 
-# Geo location (beta)
+# Geo location
 msgctxt "admin.Settings_Views_Geo"
 msgid "Lbl"
 msgstr ""
