--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.24)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.24\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.24.1)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.24.1\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.24)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.24\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.24.1)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.24.1\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2572,6 +2572,10 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooSctrCntDwnTmrChk"
 msgstr ""
 
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "StrmtbUpcTmrChk"
+msgstr ""
+
 # Lottie generic
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "LottGenChk"
@@ -2647,6 +2651,11 @@ msgstr ""
 # Loading without timing switching
 msgctxt "admin.Settings_Scripts_Common"
 msgid "LoadFastChk"
+msgstr ""
+
+# Preventing double initialization of excluded scripts
+msgctxt "admin.Settings_Scripts_Common"
+msgid "PrvntDblInitChk"
 msgstr ""
 
 # Grouping
@@ -3062,14 +3071,17 @@ msgctxt "admin.Settings_Group_Item"
 msgid "LearnLbl"
 msgstr ""
 
+# Standard processing
 msgctxt "admin.Settings_Group_Item_Settings_SklSrch"
 msgid "Std"
 msgstr ""
 
+# Fast processing
 msgctxt "admin.Settings_Group_Item_Settings_SklSrch"
 msgid "Fast"
 msgstr ""
 
+# Ultra-fast processing
 msgctxt "admin.Settings_Group_Item_Settings_SklSrch"
 msgid "Agg"
 msgstr ""
