--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.25.1)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.25.1\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.25.2)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.25.2\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.25.1)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.25.1\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.25.2)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.25.2\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -956,7 +956,7 @@ msgctxt "admin.Settings_Cache_Revalidate"
 msgid "OpSrvDelCmbItem"
 msgstr ""
 
-# Settings view
+# General
 msgctxt "admin.Settings_Nav"
 msgid "Title"
 msgstr ""
@@ -1036,7 +1036,7 @@ msgctxt "admin.Settings_Advanced"
 msgid "Title"
 msgstr ""
 
-# <strong>Simple</strong>
+# <strong>Basic</strong>
 msgctxt "admin.Settings_Nav"
 msgid "SimpleRad"
 msgstr ""
@@ -1046,9 +1046,19 @@ msgctxt "admin.Settings_Nav"
 msgid "CacheRad"
 msgstr ""
 
+# <strong>Exclusions, views and users</strong>
+msgctxt "admin.Settings_Nav"
+msgid "VarsRad"
+msgstr ""
+
 # <strong>Scripts and styles</strong>
 msgctxt "admin.Settings_Nav"
 msgid "ScriptsRad"
+msgstr ""
+
+# <strong>Content</strong>
+msgctxt "admin.Settings_Nav"
+msgid "ContentRad"
 msgstr ""
 
 # <strong>CDN and advanced</strong>
@@ -1056,14 +1066,8 @@ msgctxt "admin.Settings_Nav"
 msgid "OtherRad"
 msgstr ""
 
-# <strong>Exclusions, views and users</strong>
 msgctxt "admin.Settings_Nav"
-msgid "VarsRad"
-msgstr ""
-
-# <strong>Content</strong>
-msgctxt "admin.Settings_Nav"
-msgid "ContentRad"
+msgid "Descr"
 msgstr ""
 
 # General
@@ -3190,6 +3194,7 @@ msgctxt "admin.Settings_Advanced_AsyncMode"
 msgid "ExtCron"
 msgstr ""
 
+# Using external Cron requires additional setup. Please, read related %1$sdocumentation%2$s.
 #, php-format
 msgctxt "admin.Settings_Advanced_Common"
 msgid "AsyncMode_ExtCronDsc_%1$s%2$s"
