--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.4)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.4\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.5)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.5\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.4)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.4\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.5)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.5\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -553,51 +553,6 @@ msgctxt "admin.Manage_Stat"
 msgid "Title"
 msgstr ""
 
-# Cached pages:
-msgctxt "admin.Manage_Stat"
-msgid "ObjCountLbl"
-msgstr ""
-
-# Separated scripts:
-msgctxt "admin.Manage_Stat"
-msgid "JsCountLbl"
-msgstr ""
-
-# Separated styles:
-msgctxt "admin.Manage_Stat"
-msgid "CssCountLbl"
-msgstr ""
-
-# Separated images:
-msgctxt "admin.Manage_Stat"
-msgid "ImgCountLbl"
-msgstr ""
-
-# Separated learned structures:
-msgctxt "admin.Manage_Stat"
-msgid "LrnCountLbl"
-msgstr ""
-
-# Self-learning space:
-msgctxt "admin.Manage_Stat"
-msgid "LrnSpaceLbl"
-msgstr ""
-
-# Total used space:
-msgctxt "admin.Manage_Stat"
-msgid "UsedSpaceLbl"
-msgstr ""
-
-# Same parts separation efficiency:
-msgctxt "admin.Manage_Stat"
-msgid "FragEffLbl"
-msgstr ""
-
-# Compression efficiency:
-msgctxt "admin.Manage_Stat"
-msgid "ComprEffLbl"
-msgstr ""
-
 # Refresh statistics
 msgctxt "admin.Manage_Stat"
 msgid "Refresh"
@@ -717,6 +672,21 @@ msgstr ""
 # none
 msgctxt "admin.Manage_Status"
 msgid "GeoDbNone"
+msgstr ""
+
+# Cached pages:
+msgctxt "admin.Manage_Stat"
+msgid "ObjCountLbl"
+msgstr ""
+
+# Inodes:
+msgctxt "admin.Manage_Stat"
+msgid "FileCountLbl"
+msgstr ""
+
+# Total used space:
+msgctxt "admin.Manage_Stat"
+msgid "UsedSpaceLbl"
 msgstr ""
 
 # Mobile High Res
@@ -976,7 +946,7 @@ msgctxt "admin.Settings_CacheBrowser"
 msgid "Title"
 msgstr ""
 
-# Non-HTML content cache
+# Requests cache
 msgctxt "admin.Settings_CacheData"
 msgid "Title"
 msgstr ""
@@ -1308,6 +1278,11 @@ msgctxt "admin.Settings_Cache_Common"
 msgid "TimeoutClnForWpNonceChk"
 msgstr ""
 
+#, php-format
+msgctxt "admin.Settings_Cache_Common"
+msgid "ExtObjTimeoutCln_%1$s%2$s%3$s"
+msgstr ""
+
 # Auto-cleanup interval: %3$s days, %2$s hours, and %1$s minutes
 #, php-format
 msgctxt "admin.Settings_Cache_Common"
@@ -1415,7 +1390,7 @@ msgctxt "admin.Settings_CacheData_Item"
 msgid "PatternLbl"
 msgstr ""
 
-# Regular expression for request URI
+# Expression for request URI
 msgctxt "admin.Settings_CacheData_Item"
 msgid "PatternPhlr"
 msgstr ""
