--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.5)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.5\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.6)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.6\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.5)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.5\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.6)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.6\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1278,6 +1278,7 @@ msgctxt "admin.Settings_Cache_Common"
 msgid "TimeoutClnForWpNonceChk"
 msgstr ""
 
+# Time to live of external objects for cleanup: %3$s days, %2$s hours, and %1$s minutes
 #, php-format
 msgctxt "admin.Settings_Cache_Common"
 msgid "ExtObjTimeoutCln_%1$s%2$s%3$s"
@@ -3163,7 +3164,7 @@ msgstr ""
 # Trying to always keep a content of '%1$s' file in a right state
 #, php-format
 msgctxt "admin.Settings_Advanced_Common"
-msgid "ForceAdvCacheChk_%1$s"
+msgid "ForceCacheDropinChk_%1$s"
 msgstr ""
 
 # host and path
