--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.6)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.6\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.26.7)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.7\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.6)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.26.6\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.26.7)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.26.7\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -548,7 +548,7 @@ msgctxt "admin.Manage_Status"
 msgid "ExtDbLbl"
 msgstr ""
 
-# Statistics
+# Cache statistics
 msgctxt "admin.Manage_Stat"
 msgid "Title"
 msgstr ""
@@ -674,9 +674,13 @@ msgctxt "admin.Manage_Status"
 msgid "GeoDbNone"
 msgstr ""
 
-# Cached pages:
+# Pages:
 msgctxt "admin.Manage_Stat"
 msgid "ObjCountLbl"
+msgstr ""
+
+msgctxt "admin.Manage_Stat"
+msgid "DataObjCountLbl"
 msgstr ""
 
 # Inodes:
@@ -3161,7 +3165,7 @@ msgctxt "admin.Settings_Advanced_Common"
 msgid "EmojiIconsEnableChk"
 msgstr ""
 
-# Trying to always keep a content of '%1$s' file in a right state
+# Trying to always keep a content of '%1$s' drop-in file in a right state
 #, php-format
 msgctxt "admin.Settings_Advanced_Common"
 msgid "ForceCacheDropinChk_%1$s"
@@ -3367,7 +3371,7 @@ msgctxt "admin.Notice"
 msgid "ContentDirNotWrittable_%1$s%2$s"
 msgstr ""
 
-# The '%2$s' in '%1$s' folder is not writable. Please, <strong>make it writable</strong> and save the plugin settings.
+# The '%2$s' drop-in file in '%1$s' directory is not writable. Please, <strong>make it writable</strong> and save the plugin settings.
 #, php-format
 msgctxt "admin.Notice"
 msgid "ContentDropinNotWrittable_%1$s%2$s"
@@ -3379,13 +3383,13 @@ msgctxt "admin.Notice"
 msgid "ContentDropinNotMatchEx_%1$s%2$s"
 msgstr ""
 
-# The file '%2$s' in '%1$s' folder has wrong content. Please, <strong>save the plugin settings</strong> to correct it.
+# The '%2$s' drop-in file in '%1$s' directory has wrong content. Please, <strong>save the plugin settings</strong> to correct it.
 #, php-format
 msgctxt "admin.Notice"
 msgid "ContentDropinNotMatch_%1$s%2$s"
 msgstr ""
 
-# The file '%2$s' in '%1$s' folder is not loaded. It looks like it's some kind of special hosting or site setup.
+# The '%2$s' drop-in file in '%1$s' directory is not loaded. It looks like it's some kind of special hosting or site setup.
 #, php-format
 msgctxt "admin.Notice"
 msgid "ContentDropinNotLoaded_%1$s%2$s"
