--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.3)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.3\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.4)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.4\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.3)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.3\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.4)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.4\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1226,16 +1226,17 @@ msgctxt "admin.Settings_Cache_Revalidate"
 msgid "UpdTermsDepsPhlr"
 msgstr ""
 
+# Menus
 msgctxt "admin.Settings_Cache_Revalidate_UpdGlobs"
 msgid "MenuChk"
 msgstr ""
 
-# Elementor templates
+# Templates of Elementor
 msgctxt "admin.Settings_Cache_Revalidate_UpdGlobs"
 msgid "ElmntrTplChk"
 msgstr ""
 
-# TablePress tables
+# Tables of TablePress
 msgctxt "admin.Settings_Cache_Revalidate_UpdGlobs"
 msgid "TblPrssChk"
 msgstr ""
@@ -1436,6 +1437,36 @@ msgctxt "admin.Settings_CacheData_Item"
 msgid "PatternPhlr"
 msgstr ""
 
+# URI arguments
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "Lbl"
+msgstr ""
+
+# Exclude particular
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "ExclSpec"
+msgstr ""
+
+# Exclude all
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "ExclAll"
+msgstr ""
+
+# Don't skip anything
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "SkipNo"
+msgstr ""
+
+# Skip particular
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "SkipSpec"
+msgstr ""
+
+# Skip all
+msgctxt "admin.Settings_Exclusions_Args"
+msgid "SkipAll"
+msgstr ""
+
 # Revalidation
 msgctxt "admin.Settings_CacheData_Item"
 msgid "RevalidationLbl"
@@ -1489,8 +1520,9 @@ msgid "SrvClrChk"
 msgstr ""
 
 # Server and cloud cache warming up
+#, php-format
 msgctxt "admin.Settings_Cache_Srv"
-msgid "SrvUpdChk"
+msgid "SrvUpdChk_%1$s"
 msgstr ""
 
 # NGINX
@@ -1567,36 +1599,6 @@ msgstr ""
 # URI path begin parts or regular expressions, each on newline
 msgctxt "admin.Settings_Exclusions_Args"
 msgid "UrisPhlr"
-msgstr ""
-
-# URI arguments
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "Lbl"
-msgstr ""
-
-# Exclude particular
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "ExclSpec"
-msgstr ""
-
-# Exclude all
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "ExclAll"
-msgstr ""
-
-# Don't skip anything
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "SkipNo"
-msgstr ""
-
-# Skip particular
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "SkipSpec"
-msgstr ""
-
-# Skip all
-msgctxt "admin.Settings_Exclusions_Args"
-msgid "SkipAll"
 msgstr ""
 
 # Agents
