--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.5)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.5\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.6)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.6\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.5)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.5\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.6)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.6\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2443,17 +2443,17 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvChk"
 msgstr ""
 
-# Image's Multi View from Divi
+# Image's Multi View from Divi (legacy)
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvImgChk"
 msgstr ""
 
-# Text's Multi View from Divi
+# Text's Multi View from Divi (legacy)
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvTextChk"
 msgstr ""
 
-# Slider's Multi View from Divi
+# Slider's Multi View from Divi (legacy)
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvSldChk"
 msgstr ""
@@ -2463,6 +2463,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviMvFwHdrChk"
 msgstr ""
 
+# Slider from Divi
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "DiviSldChk"
 msgstr ""
