--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.7)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.7\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.8)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.8\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.7)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.7\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.8)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.8\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2256,6 +2256,10 @@ msgstr ""
 # Counter Widget of Elementor
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtCntrChk"
+msgstr ""
+
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "ElmntrWdgtEaelCntdwnChk"
 msgstr ""
 
 # AVO Showcase Widget of Elementor
