--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.10)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.10\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.11)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.11\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.10)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.10\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.11)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.11\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -672,6 +672,12 @@ msgstr ""
 # none
 msgctxt "admin.Manage_Status"
 msgid "GeoDbNone"
+msgstr ""
+
+# Next auto-update at: %1$s
+#, php-format
+msgctxt "admin.Manage_Status"
+msgid "ScheExtDbUpdDscr_%1$s"
 msgstr ""
 
 # Pages:
@@ -1677,6 +1683,12 @@ msgctxt "admin.Settings_Cache_Devices"
 msgid "AgentsPhlr"
 msgstr ""
 
+# License key of MaxMind: %1$s
+#, php-format
+msgctxt "admin.Settings_Views_Geo"
+msgid "ApiKeyMmDbLbl_%1$s"
+msgstr ""
+
 # Enable
 msgctxt "admin.Settings_Views_Geo"
 msgid "EnableChk"
@@ -2063,9 +2075,10 @@ msgctxt "admin.Settings_Images_Adapt"
 msgid "SzLbl_%1$s"
 msgstr ""
 
-# Use Device Pixel Ratio
+# Use Device Pixel Ratio not less that %1$s
+#, php-format
 msgctxt "admin.Settings_Images_Adapt"
-msgid "DprChk"
+msgid "DprChk_%1$s"
 msgstr ""
 
 # Process asynchronously
@@ -2101,6 +2114,10 @@ msgstr ""
 # Own algorithm
 msgctxt "admin.Settings_Images_Lazy"
 msgid "OwnChk"
+msgstr ""
+
+msgctxt "admin.Settings_Images_Lazy"
+msgid "PlchRastChk"
 msgstr ""
 
 # Remove 3rd party ones
@@ -2258,6 +2275,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtCntrChk"
 msgstr ""
 
+# Countdown Widget of Essential Addons
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtEaelCntdwnChk"
 msgstr ""
