--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.11\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.11)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.11\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.12)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.12\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2116,6 +2116,7 @@ msgctxt "admin.Settings_Images_Lazy"
 msgid "OwnChk"
 msgstr ""
 
+# Raster placeholders
 msgctxt "admin.Settings_Images_Lazy"
 msgid "PlchRastChk"
 msgstr ""
@@ -2603,6 +2604,10 @@ msgstr ""
 # Product Filter by WBW
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "WbwPrdFltChk"
+msgstr ""
+
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WooOuPrdGalChk"
 msgstr ""
 
 # JS from WooCommerce
