--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.13)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.13\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.15)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.15\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.13)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.13\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.15)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.15\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2293,11 +2293,6 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtImgCrslChk"
 msgstr ""
 
-# Product Images Widget of WooCommerce from Elementor
-msgctxt "admin.Settings_Frames_ContParts"
-msgid "ElmntrWdgtWooPrdImgsChk"
-msgstr ""
-
 # Counter Widget of Elementor
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtCntrChk"
@@ -2328,6 +2323,7 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "NktrLottChk"
 msgstr ""
 
+# Headline Animation Widget of Elementor
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "ElmntrWdgtAniHdlnChk"
 msgstr ""
@@ -2442,9 +2438,13 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "SldRev7Chk"
 msgstr ""
 
-# Product gallery images of WooCommerce from Breakdance
+# Product gallery images of WooCommerce
 msgctxt "admin.Settings_Frames_ContParts"
-msgid "WooPrdGallSldBdeChk"
+msgid "WooPrdGallChk"
+msgstr ""
+
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WooPrdGallAstrThmbsHeightChk"
 msgstr ""
 
 # Thumbnail of tagDiv
