--- a/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
+++ b/seraphinite-accelerator/languages/seraphinite-accelerator-admin.pot
@@ -6,14 +6,14 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.16)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.16\n"
+"#-#-#-#-#  cmn.admin.pot (seraphinite-accelerator 2.27.17)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.17\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.16)  #-#-#-#-#\n"
-"Project-Id-Version: seraphinite-accelerator 2.27.16\n"
+"#-#-#-#-#  main.admin.pot (seraphinite-accelerator 2.27.17)  #-#-#-#-#\n"
+"Project-Id-Version: seraphinite-accelerator 2.27.17\n"
 "Report-Msgid-Bugs-To: support@s-sols.com\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2443,8 +2443,13 @@ msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooPrdGallChk"
 msgstr ""
 
+# Product gallery images thumbnails height of WooCommerce from Astra
 msgctxt "admin.Settings_Frames_ContParts"
 msgid "WooPrdGallAstrThmbsHeightChk"
+msgstr ""
+
+msgctxt "admin.Settings_Frames_ContParts"
+msgid "WooPrdGallFltsmThmbsChk"
 msgstr ""
 
 # Thumbnail of tagDiv
